fix: z-index for error and warning

--- a/src/styles/warnings.less
+++ b/src/styles/warnings.less
@@ -6,6 +6,7 @@
     font-style: italic;
     font-size: 13px;
     color: rgb(123, 122, 120);
+    z-index: 1;
   }
 
   .sn-org-error {
@@ -15,5 +16,6 @@
     left: 50%;
     font-size: 1.2em;
     transform: translate(-50%, -50%);
+    z-index: 1;
   }
 }
